更新项目介绍，成员介绍。

--- a/project.html
+++ b/project.html
@@ -55,7 +55,7 @@
                         <a class="nav-link page-scroll" href="#">Project</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#">Members</a>
+                        <a class="nav-link page-scroll" href="members.html">Members</a>
                     </li>
                 </ul>
             </div>
@@ -70,7 +70,7 @@
                     <div class="page-heading">
                         <h1>项目介绍</h1>
                         <hr class="small">
-                        <span class="subheading">山东大学软件学院三区虚拟现实游览项目</span>
+                        <span class="subheading">基于HTC vive 的VR场景遍历及环境互动项目</span>
                     </div>
                 </div>
             </div>
@@ -83,11 +83,54 @@
             <div class="row">
                 <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 text-center">
                     <p>
-                        这里是项目介绍
+                        <span class="text-primary" style="font-size: larger;">项目名称</span><br />
+                        基于HTC vive的VR场景遍历及环境互动
                     </p>
 
+                    <p>
+                        <span class="text-primary" style="font-size: larger;">实施地点</span><br />
+                        山东大学软件园校区教学楼3区ING工作室
+                    </p>
+
+                    <p>
+                        <span class="text-primary" style="font-size: larger;">实施时间</span><br />
+                        2017年5月2日 至 2017年6月20日
+                    </p>
+
+                    <p>
+                        <span class="text-primary" style="font-size: larger;">团队名称</span><br />
+                        ING Studio VR团队
+                    </p>
+
+                    <p>
+                        <span class="text-primary" style="font-size: larger;">项目目标</span><br />
+                        通过对山东大学西格玛团队（教学楼三区）内部进行建模，在unity3d中进行虚拟现实开发，让使用者在利用HTC vive VR设备生成的仿真三区环境中，实现初步的场景漫游及巡览交互，做成一个虚拟的软件学院三区各实验室展示用平台，从而达到在虚拟现实层面的教育展示与创新实践等功能。
+                    </p>
+
+                    <p>
+                        <span class="text-primary" style="font-size: larger;">主要模块</span><br />
+                        对三区进行3D建模<br/>
+                        在Unity3D中加入交互设计<br/>
+                        导入HTCVive进行虚拟体验<br/>
+                        辅助展示平台
+                    </p>
+
+                    <p>
+                        <span class="text-primary" style="font-size: larger;">指导教师</span><br />
+                        戴鸿君
+                    </p>
+
+                    <p>
+                        <span class="text-primary" style="font-size: larger;">关键技术</span><br />
+                        仿真建模、Unity3D虚拟现实开发、HTC Vive设备交互式嵌入
+                    </p>
+
+                    <p>
+                        <span class="text-primary" style="font-size: larger;">代码量</span><br />
+                        6000行左右
+                    </p>
                     <div class="clearfix">
-                        <a class="btn btn-secondary float-right" href="posts/team/index.html">项目动态 &rarr;</a>
+                        <a class="btn btn-secondary float-right" href="posts/index/1.html">项目动态 &rarr;</a>
                     </div>
                 </div>
             </div>
@@ -103,7 +146,7 @@
                 <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1">
                     <ul class="list-inline text-center">
                         <li class="list-inline-item">
-                            <a href="https://github.com/SDU-VR" target="_blank">
+                            <a href="https://github.com/SDU-VR/SDU-VR" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
