--- a/members.html
+++ b/members.html
@@ -86,7 +86,7 @@
                         <span class="text-primary" style="font-size: larger;">项目负责人</span><br />
                         孙翔宇<br />
                         598733786@qq.com<br />
-                        <a href="http://blog.csdn.net/??" target="_blank">个人博客 &rarr;</a>
+                        <a href="http://blog.csdn.net/qq_35142634" target="_blank">个人博客 &rarr;</a>
                     </p>
 
                     <p>
