--- a/post.html
+++ b/post.html
@@ -51,7 +51,7 @@
                         <a class="nav-link page-scroll" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="about.html">About</a>
+                        <a class="nav-link page-scroll" href="#">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="post.html">Sample Post</a>
@@ -109,7 +109,7 @@
                     <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm, living object looked so fragile, so delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this has to change a man.</p>
 
                     <a href="#">
-                        <img class="img-responsive" src="img/post-sample-image.jpg" alt="">
+                        <img class="img-responsive" src="img/post-bg.jpg" alt="">
                     </a>
                     <span class="caption text-muted">To go places and do things that have never been done before – that’s what living is all about.</span>
 
